// Define la versiÃ³n de Protocol Buffers utilizada (proto3 es la mÃ¡s reciente)
syntax = "proto3";

// Nombre del paquete para organizar los servicios y mensajes
package order;

// Namespace para cÃ³digo generado en C# (.NET)
option csharp_namespace = "OrderService.Protos"; 

/**
 * ğŸš€ DefiniciÃ³n del servicio gRPC para Ã³rdenes
 * Especifica los mÃ©todos RPC disponibles para operaciones CRUD de Ã³rdenes
 */
service OrderService {
  // Crea una nueva orden con sus items asociados
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
  
  // Obtiene todas las Ã³rdenes con filtros opcionales (ID, usuario, rango de fechas)
  rpc GetAllOrders(GetAllOrdersRequest) returns (GetAllOrdersResponse);
  
  // Consulta el estado de una orden mediante su nÃºmero de seguimiento
  rpc GetOrderStatus(GetOrderStatusRequest) returns (GetOrderStatusResponse);
  
  // Actualiza el estado de una orden existente
  rpc UpdateOrderStatus(UpdateOrderStatusRequest) returns (UpdateOrderStatusResponse);
  
  // Cancela una orden con validaciÃ³n de rol (usuario o admin)
  rpc CancelOrder(CancelOrderRequest) returns (CancelOrderResponse);
  
  // Obtiene el historial completo de Ã³rdenes de un cliente
  rpc GetOrderHistory(GetOrderHistoryRequest) returns (GetOrderHistoryResponse);
}

/**
 * ğŸ“¦ Mensaje OrderItem
 * Representa un artÃ­culo individual dentro de una orden
 */
message OrderItem {
  string id = 1;              // Identificador Ãºnico del item
  string orderId = 2;         // ID de la orden a la que pertenece
  string productId = 3;       // Identificador del producto
  int32 quantity = 4;         // Cantidad del producto (nÃºmero entero)
  double price = 5;           // Precio unitario del producto (nÃºmero decimal)
}

/**
 * ğŸ“‹ Mensaje Order
 * Representa una orden completa con todos sus datos y artÃ­culos asociados
 */
message Order {
  string id = 1;              // Identificador Ãºnico de la orden (UUID)
  string clientId = 2;        // ID del cliente que realizÃ³ la orden
  string clientName = 3;      // Nombre del cliente
  double totalAmount = 4;     // Monto total de la orden (suma de todos los items)
  string status = 5;          // Estado actual: 'pendiente', 'procesando', 'enviado', 'entregado', 'cancelado'
  string trackingNumber = 6;  // NÃºmero de seguimiento del envÃ­o
  string shippingAddress = 7; // DirecciÃ³n de envÃ­o del cliente
  string createdAt = 8;       // Fecha y hora de creaciÃ³n en formato ISO 8601
  repeated OrderItem items = 9; // Lista de items que contiene la orden
}

/**
 * ğŸ“¤ Mensaje CreateOrderRequest
 * Solicitud para crear una nueva orden
 */
message CreateOrderRequest {
  string clientId = 1;              // ID del cliente que crea la orden
  string clientName = 2;            // Nombre del cliente
  string shippingAddress = 3;       // DirecciÃ³n de entrega
  repeated OrderItem items = 4;     // Array de items a incluir en la orden
}

/**
 * ğŸ“¥ Mensaje CreateOrderResponse
 * Respuesta al crear una orden (retorna la orden creada)
 */
message CreateOrderResponse {
  Order order = 1;                  // Orden reciÃ©n creada con todos sus datos
}

/**
 * ğŸ” Mensaje GetAllOrdersRequest
 * Solicitud para obtener todas las Ã³rdenes con filtros opcionales
 */
message GetAllOrdersRequest {
  string id = 1;              // Filtro opcional: ID especÃ­fico de orden
  string userId = 2;          // Filtro opcional: ID del cliente/usuario
  string startDate = 3;       // Filtro opcional: fecha inicial (formato ISO 8601)
  string endDate = 4;         // Filtro opcional: fecha final (formato ISO 8601)
}

/**
 * ğŸ“Š Mensaje GetAllOrdersResponse
 * Respuesta con lista de Ã³rdenes que coinciden con los filtros
 */
message GetAllOrdersResponse {
  repeated Order orders = 1;        // Lista de Ã³rdenes encontradas
}

/**
 * ğŸ” Mensaje GetOrderStatusRequest
 * Solicitud para consultar el estado de una orden
 */
message GetOrderStatusRequest {
  string trackingNumber = 1;        // NÃºmero de seguimiento de la orden
}

/**
 * âœ… Mensaje GetOrderStatusResponse
 * Respuesta con el estado actual de la orden
 */
message GetOrderStatusResponse {
  string status = 1;                // Estado actual de la orden
}

/**
 * ğŸ”„ Mensaje UpdateOrderStatusRequest
 * Solicitud para actualizar el estado de una orden
 */
message UpdateOrderStatusRequest {
  string id = 1;                    // ID de la orden a actualizar
  string status = 2;                // Nuevo estado de la orden
}

/**
 * âœ”ï¸ Mensaje UpdateOrderStatusResponse
 * Respuesta confirmando la actualizaciÃ³n del estado
 */
message UpdateOrderStatusResponse {
  bool success = 1;                 // Indica si la actualizaciÃ³n fue exitosa (true/false)
}

/**
 * âŒ Mensaje CancelOrderRequest
 * Solicitud para cancelar una orden
 */
message CancelOrderRequest {
  string idOrTracking = 1;          // ID de la orden o nÃºmero de seguimiento
  string role = 2;                  // Rol del usuario: 'user' o 'admin'
  string reason = 3;                // Motivo de cancelaciÃ³n (obligatorio para admin)
}

/**
 * â›” Mensaje CancelOrderResponse
 * Respuesta confirmando la cancelaciÃ³n de la orden
 */
message CancelOrderResponse {
  bool success = 1;                 // Indica si la cancelaciÃ³n fue exitosa
  string message = 2;               // Mensaje de confirmaciÃ³n o error
}

/**
 * ğŸ“š Mensaje GetOrderHistoryRequest
 * Solicitud para obtener el historial de Ã³rdenes de un cliente
 */
message GetOrderHistoryRequest {
  string clientId = 1;              // ID del cliente cuyo historial se solicita
}

/**
 * ğŸ“– Mensaje GetOrderHistoryResponse
 * Respuesta con todas las Ã³rdenes del cliente
 */
message GetOrderHistoryResponse {
  repeated Order orders = 1;        // Lista de todas las Ã³rdenes del cliente
}